--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Run Python script
-      run: python3 src/test.py
+      run: echo "${{ github.workspace }}"
       working-directory: ${{ github.workspace }}
       
         
