--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -8,7 +8,7 @@ jobs:
     test2:
         runs-on: ubuntu-latest
         steps:
-            - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+            - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} even."
 
 
 
