--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -1,11 +1,15 @@
-name: Test2
+name: Test1
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
-    test2:
-        runs-on: ubuntu-latest
-        steps:
-            - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} even."
+  example_matrix:
+    strategy:
+      matrix:
+        version: [10, 12, 14]
+    steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.version }}
 
 
 
