--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -1,20 +1,20 @@
 name: Test1
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
+
 jobs:
-  example_matrix:
+  build:
+    runs-on: ubuntu-latest
     strategy:
-      matrix:
-        version: [10, 12, 14]
+        matrix:
+            python-version: ["3.9", "3.10", "3.11"]
+
     steps:
-      - uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.version }}
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}        
 
 
-
-
-
-
-        
 
