--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,9 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [issues]
+on:
+  issues:
+    types: [opened, edited, milestoned]
+    
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
