Add toJson from test2.yaml

--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
         - name: Echo GitHub
-          run: echo ${{ github.actor }}
+          run: echo ${{ toJson(github) }}
         
         
 
