--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    if: ${{ github.actor == 'DEXP-HUB' }}
+    if: ${{ github.actor == 'DEXP-HU' }}
     runs-on: ubuntu-latest
 
     steps:
