--- a/.github/workflows/connect.yaml
+++ b/.github/workflows/connect.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Copy files via SSH
+      - name: Copy files via SSHs
         uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.HOST }}
