--- a/.github/workflows/test3.yaml
+++ b/.github/workflows/test3.yaml
@@ -13,7 +13,7 @@ jobs:
           host: ${{ secrets.HOST }}
           port: ${{ secrets.PORT }}
           username: ${{ secrets.USERNAME }}
-          privateKey: ${{ secrets.SSH_KEY }}
+          privateKey: ${{ secrets.SSHKEY }}
           command: 'ls -alh'
 
     
