--- a/.github/workflows/test3.yaml
+++ b/.github/workflows/test3.yaml
@@ -8,13 +8,16 @@ jobs:
       - name: Get repository
         uses: actions/checkout@v4
       - name: Deploy
-        uses: tiyee/action-ssh@v1.0.1
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOST }}
-          port: ${{ secrets.PORT }}
           username: ${{ secrets.USERNAME }}
-          privateKey: ${{ secrets.SSH_KEY_PUB}}
-          command: 'ls -alh'
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            cd /root/test
+            git pull origin main
+            
 
     
 
