--- a/.github/workflows/test3.yaml
+++ b/.github/workflows/test3.yaml
@@ -8,15 +8,13 @@ jobs:
       - name: Get repository
         uses: actions/checkout@v4
       - name: Deploy
-        uses: appleboy/ssh-action@v1.0.3
+        uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
+          password: ${{ secrets.PASSWORD }}
           port: 22
-          script: |
-            cd /root/test
-            git pull origin main
+          script: whoami
             
 
     
