--- a/.github/workflows/test3.yaml
+++ b/.github/workflows/test3.yaml
@@ -14,7 +14,11 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: 22
-          script: whoami
+          script: |
+            cd /root/test
+            git pull https://github.com/DEXP-HUB/testFast.git
+
+
             
 
     
